--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                 <div class="form-group"> <label for="hp-max">Maximum</label> <input type="number" id="hp-max" name="hp_max" value="10" min="1" title="Maximum Hit Points" class="centered-text"> </div>
                                 <div class="form-group"> <label for="hp-current">Current</label> <input type="number" id="hp-current" name="hp_current" value="10" title="Current Hit Points" class="centered-text"> </div>
                                 <div class="form-group"> <label for="hp-temp">Temporary</label> <input type="number" id="hp-temp" name="hp_temp" value="0" min="0" title="Temporary Hit Points" class="centered-text"> </div>
-                                <div class="form-group"> <label>Total</label> <div id="hp-total-display" class="calculated-field hp-total centered-text" title="Total Effective HP (Current + Temp)">10</div> </div>
+                                <div class="form-group" style="padding-left: 50px"> <label style="text-align: left;padding-left: 5px;">Total</label> <div id="hp-total-display" class="calculated-field hp-total centered-text" title="Total Effective HP (Current + Temp)">10</div> </div>
                             </div>
                              <!-- V6.8: HP Bar Structure -->
                              <div id="hp-bar-container" title="HP Status (Green=Current, Grey=Temporary)">
